# mcugdx

./: .gitignore  CMakeLists.txt  project_include.cmake
examples/audio/: CMakeLists.txt  partitions.csv
examples/audio/main/: boomy.cpp  main.cpp
examples/boxie/: CMakeLists.txt  convert.sh  download-playlist.sh  sdkconfig.defaults
examples/boxie/main/: main.cpp
examples/buttons/main/: main.cpp
examples/dinosaur_game/: CMakeLists.txt
examples/dinosaur_game/main/: main.c
examples/display/: partitions.csv
examples/display/main/: main.cpp
examples/doom/main/: main.c
examples/files/: CMakeLists.txt
examples/files/main/: main.cpp
examples/gpio/: out.txt
examples/gpio/main/: main.cpp
examples/neopixels/main/: main.cpp
examples/screaming_cauldron/main/: main.cpp
examples/ultrasonic/main/: main.cpp
examples/window-opener/: sdkconfig.old
examples/window-opener/main/: main.cpp
src/: audio.h  display.h  files.h  mcugdx.h  mem.h
src/common/: audio-old.c  audio.c  display.c  files.c  image.c  mem.c  qoa.h  rofs.c  rofs.h
src/desktop/: audio.c  mcugdx.c  sdfs.c
src/esp-idf/: sdfs.c
tools/: CMakeLists.txt  rofs.c  tinyfiles.h
